# speedrunapi-rust

./: .gitignore  Cargo.toml  README.md
src/: game_data.rs  gametype_data.rs  gametypes.rs  guest_data.rs  level_data.rs  lib.rs  translate.rs  user_data.rs
src/types/: game.rs  gametype.rs  guest.rs  levels.rs  mod.rs  user.rs
tests/: game_test.rs  gametype_test.rs  guest_test.rs  level_test.rs  tl_test.rs  user_test.rs
