[package]
name = "speedrunapi"
version = "0.1.0"
description = "REST API wrapper for speedrun.com's API in rust!"
license = "MIT"
# homepage = 
# documentation = 
# repository = 
authors = ["Fish"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "speedrunapi"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.23"