[package]
name = "speedrunapi"
version = "0.2.0"
description = "REST API wrapper for speedrun.com's API in rust!"
license = "MIT"
homepage = "https://crates.io/crates/speedrunapi"
documentation = "https://docs.rs/crate/speedrunapi/latest"
repository = "https://github.com/fishin-rod/speedrunapi-rust"
authors = ["Fish"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "speedrunapi"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.64", features = ["derive"] }
serde_json = "1.0.93"
serde_path_to_error = "0.1"
chrono = "0.4.23"